# skincare-advisor

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  models.py  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  products.ts  routine.ts
frontend/src/components/layout/: BottomNav.tsx  Header.tsx
frontend/src/components/product/: BarcodeScanner.tsx  ProductCandidateList.tsx  ProductCard.tsx  ProductConfirmForm.tsx  ProductDetail.tsx  ProductManualForm.tsx  ProductSearchForm.tsx
frontend/src/components/routine/: MoodSelector.tsx  RoutineResult.tsx  RoutineStep.tsx  RoutineWarning.tsx  WeatherBanner.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useProducts.ts  useRoutine.ts  useWeather.ts
frontend/src/pages/: AddProductPage.tsx  ProductListPage.tsx  RoutinePage.tsx
routers/: products.py  routine.py
services/: ingredient_checker.py  product_search.py  product_store.py  routine_suggester.py
