[project]
name = "skincare-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.89.0",
    "ddgs>=9.13.0",
    "fastapi>=0.135.3",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.43.0",
]
